# WayHome

./: CMakeLists.txt  README.md  delete_file.cpp  pars.cpp  time.cpp  way.cpp  way.h
